# sentinel

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 69ae39eab224_create_initial_schema.py  8164c7ff610f_sync_live_schema.py  f511e641d4cf_add_chunks_and_embeddings.py
apps/api/: main.py
docs/: data-sources.md
docs/adr/: 001-overview.md  002-agent-framework.md
infra/: .env.example  docker-compose.dev.yml
scripts/: download_fy2025.py  fetch_annual_report_urls.py  fix_company_names.py  fix_ocr_reingest.py  ingest.py  ingest_missing_fy2025.py  reingest_fy2025.py
tests/: __init__.py  conftest.py  test_smoke.py
