[project]
name = "sentinel"
version = "0.1.0"
description = "Agentic research copilot for Indian equities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Kishan K", email = "kishan.k.naik.ai@gmail.com" },
]

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "psycopg[binary]>=3.1.19",
    "pgvector>=0.3.2",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    # Cache
    "redis>=5.0.4",
    # HTTP
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    # PDF parsing
    # pymupdf replaces pdfplumber — has Python 3.13 wheels, faster, better table extraction
    "pymupdf>=1.24.0",
    # CLI
    "typer>=0.12.3",
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
]

# -----------------------------------------------------------
# Dependency groups (replaces deprecated tool.uv.dev-dependencies)
# -----------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "testcontainers>=4.5.1",
    "pre-commit>=3.7.1",
    "types-redis>=4.6.0.20240425",
]

# -----------------------------------------------------------
# Build system — use setuptools (simpler for monorepos)
# Hatchling requires a sentinel/ directory which we don't have.
# Our structure uses packages/ and apps/ instead.
# -----------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]
exclude = ["tests*", "docs*", "infra*", "scripts*"]

# -----------------------------------------------------------
# uv config
# -----------------------------------------------------------
[tool.uv]
package = false  # monorepo root is not a package itself

# =============================================================
# Ruff — linter + formatter
# =============================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git", ".mypy_cache", ".ruff_cache", ".venv",
    "__pycache__", "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "S101",  # allow assert in tests
    "S104",  # allow 0.0.0.0 binding in dev
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"scripts/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================
# Mypy — type checking
# =============================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = ["alembic/", "tests/", ".venv/"]

# =============================================================
# Pytest
# =============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require Docker services",
    "unit: marks fast unit tests with no external deps",
]

[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true